[package]
name = "pong"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
winit = "0.27"
bytemuck = "1.13.1"
nalgebra-glm = { version = "0.17.0", features = ["convert-bytemuck"] }
obj-rs = "0.6"
vulkanus_3d = {git = "https://github.com/Maksym-Nashyba/vulkanus_3d.git"}
colloider_2d = {git = "https://github.com/WingedCryptid/colloider_2d.git"}